# Gym-PR-Tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  demo.py  docker-compose.yml  init_db.py  main.py  models.py  pyproject.toml  repository.py  requests.http  requirements.txt  test_results.txt
app/: database.py  main.py  models.py  repository.py
backend/: .dockerignore  database.py  main.py  models.py  pyproject.toml  requests.http
backend/app/: ai_coach.py  auth.py  db.py  main.py  models.py  repository.py  worker.py
backend/scripts/: refresh.py  rotate_keys.py  seed.py
backend/tests/: conftest.py  test_main.py  test_security.py
docs/: EX3-notes.md
frontend/: .dockerignore  Dockerfile  api_client.py  app.py  consts.py  index.html  package-lock.json  package.json
frontend/css/: styles.css
frontend/js/: app.js  charts.js  components.js  config.js  milestonesData.js  milestonesView.js  modals.js  tailwind.config.js  utils.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/Input/: Input.module.css  Input.tsx
frontend/src/components/LoginRegister/: LoginRegister.module.css  LoginRegister.tsx
frontend/src/components/Milestones/: Milestones.module.css  Milestones.tsx
frontend/src/components/PRCard/: PRCard.module.css  PRCard.tsx
frontend/src/test/: Milestones.test.tsx  PRForm.test.tsx  PRList.test.tsx
frontend/templates/: analytics.html  dashboard.html  history.html  index.html  milestones.html  modals.html  sidebar.html
tests/: test_frontend.py  test_main.py
(+10 files in other folders)
