[project]
name = "gym-pr-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.121.3",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
